crates/ty_python_semantic/resources/mdtest/snapshots/enums.md_-_Enums_-_Function_syntax_-_Name_mismatch_diagno…_(9f5bdb1f7c5ad96a).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: enums.md - Enums - Function syntax - Name mismatch diagnostics
mdtest path: crates/ty_python_semantic/resources/mdtest/enums.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from enum import Enum
 2 | 
 3 | # error: [mismatched-type-name]
 4 | Mismatch = Enum("WrongName", "A B")
 5 | 
 6 | def f(name: str) -> None:
 7 |     # error: [mismatched-type-name]
 8 |     DynamicMismatch = Enum(name, "A B")
 9 | 
10 | name = "GoodMatch"
11 | GoodMatch = Enum(name, "A B")
```

# Diagnostics

```
warning[mismatched-type-name]: The name passed to `Enum` must match the variable it is assigned to
 --> src/mdtest_snippet.py:4:17
  |
3 | # error: [mismatched-type-name]
4 | Mismatch = Enum("WrongName", "A B")
  |                 ^^^^^^^^^^^ Expected "Mismatch", got "WrongName"
5 |
6 | def f(name: str) -> None:
  |

```

```
warning[mismatched-type-name]: The name passed to `Enum` must match the variable it is assigned to
  --> src/mdtest_snippet.py:8:28
   |
 6 | def f(name: str) -> None:
 7 |     # error: [mismatched-type-name]
 8 |     DynamicMismatch = Enum(name, "A B")
   |                            ^^^^ Expected "DynamicMismatch", got variable of type `str`
 9 |
10 | name = "GoodMatch"
   |

```
